--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 											<h2>Hello</h2>
 										</header>
 										<p>I'm Pravallika. I'm pursuing B.Tech with specialisation in Artificial Intelligence and Data Science. I'm currently in my third year of college.</p>
-										<ul class="actions">
+										<!--<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
+										</ul>-->
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
